[package]
name = "crabtoken"
version = "0.0.1"
edition = "2021"
description = "An alternative to JWT/Jsonwebtoken or Paseto"
documentation = "https://docs.rs/crabtoken"
repository = "https://github.com/Stipulations/CrabToken"
license = "MIT"
readme = "README.md"
keywords = ["token", "api", "verification", "apiauth", "authentication"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3.0"
hmac = "0.12.1"
sha2 = "0.10.8"
base64 = "0.22.1"
chrono = "0.4.39"